bootstrapped will_filter

--- a/app/views/will_filter/exporter/index.html.erb
+++ b/app/views/will_filter/exporter/index.html.erb
@@ -1,39 +1,30 @@
-<div class="wf_exporter_header">
-  <div class="end">
-    <%=link_to_function("&times;".html_safe, "wfExporter.hide()", :title=>"Close", :class => "close")%>
+<div class="clearfix">
+  <div style="border-bottom: 1px solid; " class="clearfix">
+    <h4 class="pull-left">Exporter</h4>
+    <div class="pull-right">
+      <%=link_to_function("&times;".html_safe, "wfExporter.hide()", :title=>"Close", :class => "close")%>
+    </div>
+    <div class="clearfix">&nbsp;</div>
   </div>
-  Exporter
 </div>
-
-<div class="wf_exporter_container">
-
-  <table style="width:100%" cellpadding="0px" cellspacing="0px;">
-    <thead>
-      <tr>
-        <td><input type="checkbox" id="wf_fld_all" onClick="wfExporter.selectAllFields(this);" style="width:20px;"></td>
-        <td>Name</td>
-        <td>Type</td>
-      </tr>        
-    </thead>
-    <tbody>
-      <% @wf_filter.model_class.columns.each_with_index do |col, index| %>
-      <tr>
-          <td>
-              <input type="checkbox" id="wf_fld_chk_<%=index%>" onClick="wfExporter.selectField(this);" style="width:20px;"><input type="hidden" id="wf_fld_name_<%=index%>" value="<%=col.name%>">
-          </td>
-          <td><%=col.name %></td>
-          <td><%=col.type %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-  
-  <hr>
-  <div class="center">
-    Format: <%= select_tag("wf_export_format_selector", options_for_select(@wf_filter.export_formats,  @wf_filter.format)) %>
+<div class="well clearfix">
+  <label class="checkbox">
+    <input type="checkbox" id="wf_fld_all" onClick="wfExporter.selectAllFields(this);">
+    Select All
+  </label>
+  <% @wf_filter.model_class.columns.each_with_index do |col, index| %>
+    <label class="checkbox">
+      <input type="checkbox" id="wf_fld_chk_<%=index%>" onClick="wfExporter.selectField(this);" style="width:20px;">
+      <input type="hidden" id="wf_fld_name_<%=index%>" value="<%=col.name%>">
+      <%=col.name.humanize %> ( <%=col.type %> )
+    </label>
+  <% end %>
+  <div style="width: 100%; ">
+  Format: <%= select_tag("wf_export_format_selector", options_for_select(@wf_filter.export_formats,  @wf_filter.format), :style => "width: 100%;" ) %>
   </div>
+
   <div class="center">
-      <%=link_to_function("<span>Export</span>".html_safe, "wfExporter.exportFilter()", :class => "wf_grey_button wf_pcb") %>
-      <%=link_to_function("<span>Cancel</span>".html_safe, "wfExporter.hide()", :class => "wf_grey_button wf_pcb") %>
+      <%=link_to_function("Export".html_safe, "wfExporter.exportFilter()", :class => "btn btn-primary") %>
+      <%=link_to_function("Cancel".html_safe, "wfExporter.hide()", :class => "btn btn-warning") %>
   </div>
 </div>
