--- a/app/views/will_filter/filter/_condition.html.erb
+++ b/app/views/will_filter/filter/_condition.html.erb
@@ -1,28 +1,19 @@
 <% if wf_filter.errors[index] %>
-  <tr>
-    <td colspan="2"></td> 
-    <td>
-      <div class="error">
-        <%= wf_filter.errors[index] %>  
-      </div>
-    </td>
-    <td></td>
-  </tr> 
+  <div class="alert alert-error">
+    <%= wf_filter.errors[index] %>  
+  </div>
 <% end %>
-
-<tr>
-  <td class="condition">
-    <%= select_tag "wf_c#{index}", options_for_select(wf_filter.condition_options, condition.key.to_s), {:class=>"wf_input full_width", :onChange=>"wfFilter.updateConditionAt('#{index}')"} %>
-  </td>
-  <td class="operator">
-    <%= select_tag "wf_o#{index}", options_for_select(wf_filter.operator_options_for(condition.key), condition.operator.to_s), {:class=>"wf_input full_width", :onChange=>"wfFilter.updateConditionAt('#{index}')"} %>
-  </td>
-  <td class="values">
-	  <%= render :partial => "/will_filter/filter/containers/#{condition.container.template_name}", :locals => {:container => condition.container, :index => index} %>
-  </td>
-  <td class="actions">
-    <%=link_to_function("<span>-</span>".html_safe, "wfFilter.removeConditionAt('#{index}')", :class => "wf_grey_button wf_pcb") %>
-    <%=link_to_function("<span>+</span>".html_safe, "wfFilter.addConditionAfter('#{index}')", :class => "wf_grey_button wf_pcb") %>
-  </td>
-</tr>
-      
+<div class="clearfix">
+  <div class="pull-left span4">
+    <%= select_tag "wf_c#{index}", options_for_select(wf_filter.condition_options, condition.key.to_s), {:class=>"span8", :onChange=>"wfFilter.updateConditionAt('#{index}')"} %>
+    <%= select_tag "wf_o#{index}", options_for_select(wf_filter.operator_options_for(condition.key), condition.operator.to_s), {:class=>"span4", :onChange=>"wfFilter.updateConditionAt('#{index}')"} %>
+  </div>
+  <div class="pull-left span6">
+    <%= render :partial => "/will_filter/filter/containers/#{condition.container.template_name}", :locals => {:container => condition.container, :index => index} %>
+  </div>
+  <div class="btn-group pull-right">
+    <%=link_to_function("-".html_safe, "wfFilter.removeConditionAt('#{index}')", :class => "btn") %>
+    <%=link_to_function("+".html_safe, "wfFilter.addConditionAfter('#{index}')", :class => "btn") %>
+  </div>
+</div>
+<div class="clearfix">&nbsp;</div>
