--- a/app/views/will_filter/filter/_conditions.html.erb
+++ b/app/views/will_filter/filter/_conditions.html.erb
@@ -1,37 +1,30 @@
-
 <%= render :partial => '/will_filter/filter/conditions_header', :locals => {:wf_filter => wf_filter} %>
-
 <div class="body">
-
   <% if wf_filter.errors[:filter] %>
-    <div class="wf_filter_error">
+    <div class="alert alert-error">
       <%= wf_filter.errors[:filter] %>
     </div>
   <% end %>
 
-  <div class="filter_match_type">
-    <div class="end">
-      <small>
-        <%=link_to_function("Toggle Conditions", "wfFilter.toggleDebugger()") %>
-      </small>
-    </div>
-    Match <%= select_tag(:wf_match, options_for_select(wf_filter.match_options, wf_filter.match), {:onChange=>"wfFilter.markDirty()"}) %>
-    of the following conditions:
+  <div class="clearfix">
+    <label style="display: inline-block; float: none;">Match</label>
+    <%= select_tag(:wf_match, options_for_select(wf_filter.match_options, wf_filter.match), {:onChange=>"wfFilter.markDirty()"}) %>
   </div>
 
+  <div class="clearfix">&nbsp;</div>
   <% if wf_filter.size == 0 %>
-    <div class="no_filter_hint">
+    <div class="alert alert-info">
       You haven't added any filter conditions, so all of the results were returned.
-      Use the "Add" button in the bottom left corner to add a new condition or select
+      Use the "Add" button in the bottom right corner to add a new condition or select
       a predefined filter from a drop-down list above.
     </div>
   <% else %>
-    <table class="table" cellpadding="0" cellspacing="0">
+    <div class="table clearfix">
       <% 0.upto(wf_filter.size-1) do |index| %>
         <% condition = wf_filter.condition_at(index) %>
         <%= render :partial => "/will_filter/filter/condition", :locals => {:wf_filter => wf_filter, :condition => condition, :index => index}%>
       <% end %>
-    </table>
+    </div>
   <% end %>
 
   <div id="wf_debugger" class="debugger" style="display:none;">
