--- a/app/views/will_filter/filter/_container.html.erb
+++ b/app/views/will_filter/filter/_container.html.erb
@@ -1,13 +1,13 @@
 <%= will_filter_scripts_tag %>
 
-<%= form_tag({}, {:method => :get, :name=>'wf_form', :id => 'wf_form', :class => 'wf_form' }) do %>
-<div class="wf_container">
-
-  <div id="wf_filter_conditions" class="conditions">
+<%= form_tag({}, {:method => :get, :name=>'wf_form', :id => 'wf_form', :class => 'form-horizontal' }) do %>
+<div class="well bs_wf">
+  <div id="wf_filter_conditions" class="conditions clearfix">
     <%= render :partial=> '/will_filter/filter/conditions', :locals => { :wf_filter => wf_filter } %>
   </div>
 
-  <div class="footer">
+  <div class="clearfix">&nbsp;</div>
+  <div class="footer clearfix">
     <%= render :partial => '/will_filter/filter/conditions_footer', :locals => { :wf_filter => wf_filter } %>
   </div>
 
