--- a/app/views/will_filter/filter/_conditions_header.html.erb
+++ b/app/views/will_filter/filter/_conditions_header.html.erb
@@ -1,4 +1,4 @@
-<div style="margin:0;padding:0;display:inline">
+<div>
   <%= hidden_field_tag(:wf_id, wf_filter.id) %>
   <%= hidden_field_tag(:wf_type, wf_filter.class.name) %>
   <%= hidden_field_tag(:wf_dirty, "false") %>
@@ -13,26 +13,24 @@
   <%= hidden_field_tag(:wf_export_fields, "") %>
 </div>
 
-<div class="header">
-  <% if wf_filter.show_export_options? %>
-    <div class="end" style="padding-left:3px;">
-      <%=link_to_function("<span>Export Data...</span>".html_safe, "wfExporter.show(this)", :class => "wf_grey_button wf_pcb") %>
-    </div>  
-  <% end %>
-  
-  <% if wf_filter.show_save_options? %>
-    <div class="end">
-      <%=link_to_function("<span>Save As New...</span>".html_safe, "wfFilter.saveFilter()", :class => "wf_grey_button wf_pcb") %>
+<div class="header clearfix">
+  <div class="pull-right">
+    <%=link_to_function("Toggle Conditions", "wfFilter.toggleDebugger()", :class => 'btn btn-mini') %>
+    <% if wf_filter.show_export_options? %>
+      <%=link_to_function("Export".html_safe, "wfExporter.show(this)", :class => "btn btn-mini") %>
+    <% end %>
+    <% if wf_filter.show_save_options? %>
+      <%=link_to_function("Save".html_safe, "wfFilter.saveFilter()", :class => "btn btn-mini") %>
       <% if wf_filter.id %>
-        <%=link_to_function("<span>Update</span>".html_safe, "wfFilter.updateFilter()", :class => "wf_grey_button wf_pcb") %>
-        <%=link_to_function("<span>Delete</span>".html_safe, "wfFilter.deleteFilter()", :class => "wf_grey_button wf_pcb") %>
+        <%=link_to_function("Update".html_safe, "wfFilter.updateFilter()", :class => "btn btn-mini") %>
+        <%=link_to_function("Delete".html_safe, "wfFilter.deleteFilter()", :class => "btn btn-mini") %>
       <% end %>
-    </div>
-  <% end %>
-
-  <div>
+    <% end %>
+  </div>
+  <div class="pull-left">
     <% unless wf_filter.saved_filters.empty? %>
        <%= select_tag(:wf_key, options_for_select(wf_filter.saved_filters, wf_filter.key), {:onChange=>"wfFilter.loadSavedFilter()"}) %>
     <% end %>
   </div>
 </div>
+<div class="clearfix">&nbsp;</div>
