--- a/app/views/will_filter/filter/containers/_boolean.html.erb
+++ b/app/views/will_filter/filter/containers/_boolean.html.erb
@@ -1,5 +1,9 @@
-<div class="boolean_container">
-	<%=radio_button_tag("wf_v#{index}_0", '1', (container.value == '1'), :style => 'width:20px', :onChange => 'wfFilter.fieldChanged(this)')%>	True
-  &nbsp;&nbsp;
-	<%=radio_button_tag("wf_v#{index}_0", '0', (container.value == '0'), :style => 'width:20px', :onChange => 'wfFilter.fieldChanged(this)')%>	False
-</div>
+<label class="radio pull-left">
+  <%=radio_button_tag("wf_v#{index}_0", '1', (container.value == '1'), :onChange => 'wfFilter.fieldChanged(this)')%>
+  True
+</label>
+<label class="radio pull-left">&nbsp;</label>
+<label class="radio pull-left">
+  <%=radio_button_tag("wf_v#{index}_0", '0', (container.value == '0'), :onChange => 'wfFilter.fieldChanged(this)')%>
+  False
+</label>
