--- a/app/views/will_filter/filter/containers/_date_time.html.erb
+++ b/app/views/will_filter/filter/containers/_date_time.html.erb
@@ -1,10 +1,4 @@
-<table class='values' cellspacing='0px' cellpadding='0px'>
-	<tr>
-    <td width='99%'>
-			<%=text_field_tag("wf_v#{index}_0", container.sanitized_value, :style => 'width:99%', :onChange => 'wfFilter.fieldChanged(this)')%>	
-    </td>
-		<td width='1%'>
-			<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select date and time", :class => "wf_calendar_trigger"), "wfCalendar.selectDateTime('wf_v#{index}_0', this)")%>	
-    </td>
-	</tr>
-</table>
+<div class="input-prepend">
+<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select date and time", :class => "add-on"), "wfCalendar.selectDateTime('wf_v#{index}_0', this)")%>
+<%=text_field_tag("wf_v#{index}_0", container.sanitized_value, :style => 'width:99%', :onChange => 'wfFilter.fieldChanged(this)')%>
+</div>
