--- a/app/views/will_filter/filter/containers/_date_time_range.html.erb
+++ b/app/views/will_filter/filter/containers/_date_time_range.html.erb
@@ -1,16 +1,9 @@
-<table class='values' cellspacing='0px' cellpadding='0px'>
-	<tr>
-    <td width='49%'>
-			<%=text_field_tag("wf_v#{index}_0", container.sanitized_value(0), :style => 'width:98%', :onChange => 'wfFilter.fieldChanged(this)')%>	
-    </td>
-		<td width='1%'>
-			<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select start date and time", :class => "wf_calendar_trigger"), "wfCalendar.selectDateTime('wf_v#{index}_0', this)")%>	
-    </td>
-    <td width='49%'>
-			<%=text_field_tag("wf_v#{index}_1", container.sanitized_value(1), :style => 'width:98%', :onChange => 'wfFilter.fieldChanged(this)')%>	
-    </td>
-    <td width='1%'>
-			<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select end date and time", :class => "wf_calendar_trigger"), "wfCalendar.selectDateTime('wf_v#{index}_1', this)")%>	
-    </td>
-	</tr>
-</table>
+<div class="input-prepend span6">
+<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select start date and time", :class => "add-on"), "wfCalendar.selectDateTime('wf_v#{index}_0', this)")%>	
+<%=text_field_tag("wf_v#{index}_0", container.sanitized_value(0), :class => 'span10', :onChange => 'wfFilter.fieldChanged(this)')%>	
+</div>
+
+<div class="input-prepend span6">
+<%=link_to_function(image_tag("will_filter/clock.png", :title => "Select end date and time", :class => "add-on"), "wfCalendar.selectDateTime('wf_v#{index}_1', this)")%>	
+<%=text_field_tag("wf_v#{index}_1", container.sanitized_value(1), :class => 'span10', :onChange => 'wfFilter.fieldChanged(this)')%>	
+</div>
